--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,9 @@ pythonenv*
 /clang/utils/analyzer/projects/*/PatchedSource
 /clang/utils/analyzer/projects/*/ScanBuildResults
 /clang/utils/analyzer/projects/*/RefScanBuildResults
+
+#==============================================================================#
+# Visual  Studio
+#==============================================================================#
+/*/out
+/*/CMakeSettings.json
